# realtime_news

./: .env  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  redeploy-realtime_parser.sh  setup.cfg
EDA/: CheckCrud.ipynb  (+6 more)
db_lib/: Dockerfile  alembic.ini  pyproject.toml
db_lib/alembic/: env.py
db_lib/db_lib/: crud.py  database.py  models.py  poputale.py
ml_jobs/: Dockerfile  Makefile  pyproject.toml
ml_jobs/ml_jobs/: clusterisation.py  cron_schedule.txt
ml_jobs/ml_jobs/scripts/: populate.py
parser/: Dockerfile  Makefile  README.md  cron_schedule.txt  news_sources.txt  parse_all.sh  parse_news.py  parse_tg.py  pyproject.toml  resource_list.txt  test_rules.txt  test_sources.txt
parser/data_collection/: __init__.py  base_parser.py  news_spider.py  newsspider.py  parser_zoo.py  rss_parser.yaml  rss_spider.py  social_media_spider.py  tg_spider.py  util.py  vk_parser.py  vk_spider.py  yandex_spider.py
parser/parser/data_collection/: ok_spider.py  rss_spider.py  tg_spider.py  util.py  vk_spider.py  yandex_spider.py
parser/parser/source_files/: sitemap.url  smi2.url
parser/parser/test/: test_spider.py  yaml_beautify.py
parser/parser/test/rbc_data/: rbc_news1.html  rbc_news1.yaml  rbc_news2.yaml  rbc_news3.html  rbc_news3.yaml  rbc_news4.yaml
parser/parser/test/ria_data/: ria_news1.html  ria_news2.html  ria_news2.yaml  ria_news3.html
parser/parser/test/tass_data/: tass_news1.html  tass_news2.yaml  tass_news3.yaml  tass_news4.html
parser/scripts/: finish_parse.sh  main.sh  parse_all.sh
parser/source_files/: smi.url  smi1.url  social_media.json  tg_channels.json
parser/test/: test_parser_zoo.py  test_spider.py  util.py
parser/test/rbc_data/: rbc_news1.yaml  rbc_news2.html  rbc_news3.html  rbc_news4.html  rbc_news4.yaml
parser/test/rbk_data/: rbk_news1.html  rbk_news2.html  rbk_news2.yaml  rbk_news3.html  rbk_news3.yaml
parser/test/ria_data/: ria_news1.yaml  ria_news2.yaml  ria_news3.yaml
parser/test/tass_data/: sitemap_hot.xml  tass_main_page.html  tass_news1.html  tass_news1.yaml  tass_news2.html  tass_news2.yaml  tass_news3.html  tass_news3.yaml  tass_news4.yaml
parser/url_files/: smi.url  top60.url  vk.url
tags/: Dockerfile  Makefile  pyproject.toml  tag.py
web_service/: Dockerfile  Makefile  pyproject.toml
web_service/src/: config.py  handlers.py  models.py  news_extractor.py  run_server.py  session_logging.py  statistics.py  utils.py
web_service/src/models/: model.save
web_service/src/scripts/: clusterisation.py
web_service/src/static/css/: custom.css
web_service/src/static/js/: custom.js
web_service/src/templates/: index.html  main-nav.html  search.html  single.html  single_post.html
web_service/web_service/: config.py  handlers.py  models.py  news_extractor_classes.py  run_server.py  utils.py
web_service/web_service/src/: clusterisation.py  config.py  handlers.py  models.py  news_extractor.py  session_logging.py  statistics.py  utils.py
web_service/web_service/src/models/: .gitattributes
web_service/web_service/templates/: index.html
web_service/web_service/tests/: test_utils.py  test_web_service.py
(+57 files in other folders)
