[tool.poetry]
name = "realtime_news"
version = "0.1.0"
description = ""
authors = ["a"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
jupyter = "^1.0.0"
pandas = "^1.3.4"
isort = "^5.9.3"
pylint = "^2.11.1"
flake8 = "^4.0.1"
black = "^21.9b0"
unify = "^0.5"
Jinja2 = "^3.0.2"
db-lib = {path = "../db_lib"}
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
