[tool.poetry]
name = "realtime_news"
version = "0.1.0"
description = ""
authors = ["MikhailYeka <mihael.gashkov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
sklearn = "^0.0"
uvicorn = "^0.15.0"
jupyter = "^1.0.0"
pandas = "^1.3.4"
isort = "^5.9.3"
pylint = "^2.11.1"
flake8 = "^4.0.1"
black = "^21.9b0"
unify = "^0.5"
Jinja2 = "^3.0.2"
alembic = "^1.7.4"
fastapi-sqlalchemy = "^0.2.1"
psycopg2-binary = "2.9.1"
db-lib = {path = "../db_lib"}
python-dotenv = "^0.19.2"
stop-words = "^2018.7.23"
PyYAML = "^6.0"
plotly = "^5.4.0"
fasttext = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
